Bug fix: incorrect display of header on mobiles

--- a/src/styles.less
+++ b/src/styles.less
@@ -32,6 +32,7 @@ body {
 		top: 0;
 		right: -100%;
 		visibility: hidden;
+		z-index: 99;
 	}
 
 	&.active {
